42app and refresh token rotation ok

--- a/frontend/src/pages/Landing/Landing.css
+++ b/frontend/src/pages/Landing/Landing.css
@@ -38,9 +38,8 @@
   }
   
   .read-the-docs {
-	color: #b6b6b6;
+	color: #888;
   }
-  
 
   .button {
 	background-color: #9b9e9c;
@@ -52,3 +51,4 @@
 	display: inline-block;
 	font-size: 16px;
   }
+  
