--- a/frontend/src/pages/game/Game.css
+++ b/frontend/src/pages/game/Game.css
@@ -44,6 +44,15 @@
     background-color: whitesmoke;
   }
 
+  .gameEnd {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+    z-index: 10;
+  }
+
   .countdown, .go-message {
     position: absolute;
     top: 50%;
