--- a/frontend/src/pages/Signup/Signup.css
+++ b/frontend/src/pages/Signup/Signup.css
@@ -1,43 +1,63 @@
-#root {
-	max-width: 1280px;
-	margin: 0 auto;
-	padding: 2rem;
-	text-align: center;
-  }
-  
-  .logo {
-	height: 6em;
-	padding: 1.5em;
-	will-change: filter;
-	transition: filter 300ms;
-  }
-  .logo:hover {
-	filter: drop-shadow(0 0 2em #646cffaa);
-  }
-  .logo.react:hover {
-	filter: drop-shadow(0 0 2em #61dafbaa);
-  }
-  
-  @keyframes logo-spin {
-	from {
-	  transform: rotate(0deg);
-	}
-	to {
-	  transform: rotate(360deg);
-	}
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-	a:nth-of-type(2) .logo {
-	  animation: logo-spin infinite 20s linear;
-	}
-  }
-  
-  .card {
-	padding: 2em;
-  }
-  
-  .read-the-docs {
-	color: #888;
-  }
-  
+.signup-form{
+	padding-bottom: 9%;
+    display: flex;
+    justify-content: center;
+}
+
+.username{
+	padding-bottom: 2%;
+}
+
+.user-input{
+	font-size: 16px;
+	border: 1px solid white;
+	border-radius: 8px;
+	filter: drop-shadow(0 0 2px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+	padding-top: 6px;
+	padding-bottom: 6px;
+}
+
+.submit{
+	padding-top: 4%;
+}
+
+.submit-button{
+    font-size: 15px;
+    color: white;
+    border: 2px solid #775d85;
+    border-radius:30px;
+    padding: 5px 20px;
+    cursor: pointer;
+    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+    transition: .5s;
+    background: transparent;
+}
+
+.submit-button:hover {
+    color: white;
+    background-color: #775d85;
+    filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
+}
+
+.register{
+	padding-top: 15%;
+	padding-bottom: 10px;
+}
+
+.register-button{
+	font-size: 12px;
+    color: white;
+    border: 2px solid #775d85;
+    border-radius:30px;
+    padding: 5px 20px;
+    cursor: pointer;
+    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+    transition: .5s;
+    background: transparent;
+}
+
+.register-button:hover {
+    color: white;
+    background-color: #775d85;
+    filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
+}
