--- a/frontend/src/pages/Landing/Landing.css
+++ b/frontend/src/pages/Landing/Landing.css
@@ -3,11 +3,25 @@
     justify-content: center;
     align-items: center;
     opacity: 90%;
-    padding-top: 10%;
+
+}
+
+.game{
+    display: flex;
+    justify-content: center;
+}
+
+.game-pong{
+    width: 580px;
 }
 
 .log{
-    padding-top: 5%;
+    padding-top: 6%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-left: 30%;
+    margin-right: 30%;
 }
 
 .button1{
@@ -48,4 +62,27 @@
 
 .display-button2{
     padding-top: 3%;
+}
+
+.account{
+    padding-top: 6%;
+	padding-bottom: 8px;
+}
+
+.register-button{
+	font-size: 12px;
+    color: white;
+    border: 2px solid #775d85;
+    border-radius:30px;
+    padding: 5px 20px;
+    cursor: pointer;
+    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+    transition: .5s;
+    background: transparent;
+}
+
+.register-button:hover {
+    color: white;
+    background-color: #775d85;
+    filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
 }
