--- a/frontend/src/pages/Game/PongGame.css
+++ b/frontend/src/pages/Game/PongGame.css
@@ -23,8 +23,8 @@
   
   .ball {
     position: absolute;
-    width: 2%;
-    height: 2%;
+    width: 12px;
+    height: 12px;
     background-color: whitesmoke;
     border-radius: 50%;
   }
@@ -32,7 +32,7 @@
   .paddle {
     position: absolute;
     width: 1%;
-    height: 12%;
+    height: 50px;
   }
   
   .paddle1 {
