--- a/frontend/src/pages/Landing/Landing.css
+++ b/frontend/src/pages/Landing/Landing.css
@@ -1,88 +1,54 @@
-.logo-landing{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 90%;
-}
+#root {
+	max-width: 1280px;
+	margin: 0 auto;
+	padding: 2rem;
+	text-align: center;
+  }
+  
+  .logo {
+	height: 6em;
+	padding: 1.5em;
+	will-change: filter;
+	transition: filter 300ms;
+  }
+  .logo:hover {
+	filter: drop-shadow(0 0 2em #646cffaa);
+  }
+  .logo.react:hover {
+	filter: drop-shadow(0 0 2em #61dafbaa);
+  }
+  
+  @keyframes logo-spin {
+	from {
+	  transform: rotate(0deg);
+	}
+	to {
+	  transform: rotate(360deg);
+	}
+  }
+  
+  @media (prefers-reduced-motion: no-preference) {
+	a:nth-of-type(2) .logo {
+	  animation: logo-spin infinite 20s linear;
+	}
+  }
+  
+  .card {
+	padding: 2em;
+  }
+  
+  .read-the-docs {
+	color: #888;
+  }
 
-.game-landing{
-    display: flex;
-    justify-content: center;
-}
-
-.game-pong-landing{
-    width: 530px;
-    margin-top: -10px;
-}
-
-.log{
-    padding-top: 5%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-left: 30%;
-    margin-right: 30%;
-}
-
-.button1{
-    font-size: 18px;
-    color: white;
-    border: 3px solid #775d85;
-    border-radius:30px;
-    padding: 5px 20px;
-    cursor: pointer;
-    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
-    transition: .5s;
-    background: transparent;
-}
-
-.button1:hover {
-    color: white;
-    background-color: #775d85;
-    filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
-}
-
-.button2{
-    font-size: 18px;
-    color: white;
-    border: 3px solid #775d85;
-    border-radius:30px;
-    padding: 5px 20px;
-    cursor: pointer;
-    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
-    transition: .5s;
-    background: transparent;
-}
-
-.button2:hover {
-    color: white;
-    background-color: #775d85;
-    filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
-}
-
-.display-button2{
-    padding-top: 3%;
-}
-
-.account{
-    padding-top: 9%;
-	padding-bottom: 8px;
-}
-
-.register-button{
-	font-size: 12px;
-    color: white;
-    border: 2px solid #775d85;
-    border-radius:30px;
-    padding: 5px 20px;
-    cursor: pointer;
-    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
-    transition: .5s;
-    background: transparent;
-}
-
-.register-button:hover {
-    color: white;
-    background-color: #775d85;
-    filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
-}
+  .button {
+	background-color: #9b9e9c;
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+  }
+  
