--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -18,6 +18,11 @@
   padding-bottom: 2%;
 }
 
+::placeholder {
+	opacity: 0.3;
+	font-style: italic;
+}
+
 .user-input {
   font-size: 16px;
   border: 1px solid white;
@@ -26,6 +31,7 @@
     brightness(2);
   padding-top: 6px;
   padding-bottom: 6px;
+  padding-left: 0.7%;
 }
 
 .submit {
