--- a/frontend/src/pages/Game/PongGame.css
+++ b/frontend/src/pages/Game/PongGame.css
@@ -1,79 +1,122 @@
 /* Game.css */
 
-.scores-container {
+
+.game {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  width: 600px;
-  height: 30px;
+  transform-origin: top left;
+  aspect-ratio: 4 / 3;
+  width: auto;
+  height: auto; 
+  background-color: #000;
+  max-inline-size: 100%;
+  overflow-x: hidden !important;
+  font-size: calc(1vw + 1vh);
+  margin: 0 auto;
 }
 
-.score {
-  font-size: 20px; /* Adjust the font size as needed */
-  color: #fff; /* Text color */
-}
-
-.game-board {
-  position: relative;
-  width: 600px;
-  height: 450px;
-  border: 3px solid whitesmoke;
-  overflow: hidden;
-}
-  
-  .ball {
-    position: absolute;
-    width: 12px;
-    height: 12px;
-    background-color: whitesmoke;
-    border-radius: 50%;
-  }
-  
-  .paddle {
-    position: absolute;
-    width: 1%;
-    height: 50px;
-  }
-  
-  .paddle1 {
-    left: 1%; /* Adjust paddle position as needed */
-    background-color: whitesmoke;
-  }
-  
-  .paddle2 {
-    right: 1%; /* Adjust paddle position as needed */
-    background-color: whitesmoke;
+  .scores-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 15%;
   }
 
-  .gameEnd {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 2rem;
-    z-index: 10;
+  .score {
+    color: #fff;
   }
 
-  .countdown, .go-message {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 5rem;
-    z-index: 10;
+  .game-board {
+    position: relative;
+    width: 100%;
+    height: 75%;
+    border: 3px solid whitesmoke;
+    overflow: hidden;
   }
   
-  .go-message {
-    animation: fadeOut 1s forwards;
-  }
-  
-  @keyframes fadeOut {
-    to {
-      opacity: 0;
+    .ball {
+      position: absolute;
+      width: 2%;
+      height: 3.555555556%;
+      background-color: whitesmoke;
+      border-radius: 50%;
     }
+    
+    .paddle {
+      position: absolute;
+      width: 1%;
+      height: 11.1111111%;
+    }
+    
+    .paddle1 {
+      left: 1%;
+      background-color: whitesmoke;
+    }
+    
+    .paddle2 {
+      right: 1%;
+      background-color: whitesmoke;
+    }
+
+    .gameEnd {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: calc(2vw + 2vh) !important;
+      z-index: 10;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .gameEnd .gameEndMessage {
+      font-size: calc(2vw + 2vh) !important;
+      margin-bottom: calc(0.5vw + 0.5vh);
   }
 
-/* Part mode */
+    .buttonGroup {
+        margin-top: calc(0.5vw + 0.5vh);
+        font-size: calc(1vw + 1vh) !important;
+        display: flex;
+        justify-content: space-between; 
+        width: 100%; 
+        max-width: 200px;
+    }
+
+      .buttonGroup button {
+          padding: calc(0.5vw + 0.5vh) calc(1vw + 1vh);
+          margin-right: calc(1vw + 1vh);
+      }
+
+      .buttonGroup button:last-child {
+        margin-right: 0; /* remove margin from the right of the last button */
+      }
+  
+    .countdown, .go-message {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      font-size: calc(3vw + 3vh);
+      z-index: 10;
+    }
+    
+    .go-message {
+      animation: fadeOut 1s forwards;
+    }
+    
+    @keyframes fadeOut {
+      to {
+        opacity: 0;
+      }
+    }
+
+/* Party mode */
 .party-ball {
   background-color: #ff00ff;
   animation: glow 1s ease-in-out infinite alternate;
