--- a/frontend/src/pages/Game/PongGame.css
+++ b/frontend/src/pages/Game/PongGame.css
@@ -14,7 +14,7 @@
   max-inline-size: 100%;
   overflow-x: hidden !important;
   font-size: calc(1vw + 1vh);
-  margin: 0 auto;
+  margin: 0 ;
 }
 
   .scores-container {
