--- a/frontend/src/pages/Game/PongGame.css
+++ b/frontend/src/pages/Game/PongGame.css
@@ -1,6 +1,5 @@
 /* Game.css */
 
-
 .game {
   display: flex;
   flex-direction: column;
@@ -14,14 +13,14 @@
   max-inline-size: 100%;
   overflow-x: hidden !important;
   font-size: calc(1vw + 1vh);
-  margin: 0 ;
+  margin : 0 auto;
 }
 
   .scores-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
+    width: 80%;
     height: 15%;
   }
 
@@ -31,10 +30,12 @@
 
   .game-board {
     position: relative;
-    width: 100%;
-    height: 75%;
-    border: 3px solid whitesmoke;
+    width: 80%;
+    height: 60%;
+    border: 3px solid rgba(255,255,255,1);
     overflow: hidden;
+    opacity: 0.8;
+    border-radius: 1rem;
   }
   
     .ball {
@@ -47,19 +48,23 @@
     
     .paddle {
       position: absolute;
-      width: 1%;
-      height: 11.1111111%;
+      width: 1.6666667%;
+      height: 13.333333%;
     }
     
-    .paddle1 {
-      left: 1%;
-      background-color: whitesmoke;
-    }
-    
-    .paddle2 {
+      .paddle1 {
+        left: 1%;
+        border-radius: 1rem;
+        background: rgb(255,255,255);
+        background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(199,159,221,1) 42%, rgba(149,11,217,1) 100%);    
+      }
+
+      .paddle2 {
       right: 1%;
-      background-color: whitesmoke;
-    }
+      border-radius: 1rem;
+      background: rgb(255,255,255);
+      background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(199,159,221,1) 42%, rgba(149,11,217,1) 100%);
+      }
 
     .gameEnd {
       position: absolute;
@@ -131,6 +136,26 @@
   animation: glow 1s ease-in-out infinite alternate;
 }
 
+/* Hardcore mode */
+.hardcore-paddle {
+  height: 10%;
+  animation: blink 3s infinite;
+}
+
+.glow-medium {
+  -webkit-box-shadow:0px 0px 72px 10px rgba(154,46,255,0.79);
+  -moz-box-shadow: 0px 0px 72px 10px rgba(154,46,255,0.79);
+  box-shadow: 0px 0px 72px 10px rgba(154,46,255,0.79);
+}
+
+.glow-small {
+  -webkit-box-shadow:0px 0px 40px 6px rgba(154,46,255,0.79);
+  -moz-box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
+  box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
+}
+
+
+
 @keyframes glow {
   from {
     box-shadow: 0 0 5px #ff00ff;
@@ -138,4 +163,10 @@
   to {
     box-shadow: 0 0 30px #ff00ff;
   }
+}
+
+@keyframes blink {
+  0% { opacity: 1; }
+  50% { opacity: 0; }
+  100% { opacity: 1; }
 }
