--- a/frontend/src/pages/Game/PongGame.css
+++ b/frontend/src/pages/Game/PongGame.css
@@ -32,7 +32,7 @@
     position: relative;
     width: 80%;
     height: 60%;
-    border: 3px solid rgba(255,255,255,1);
+    border: 0.18rem solid rgba(255,255,255,1);
     overflow: hidden;
     opacity: 0.8;
     border-radius: 1rem;
@@ -68,10 +68,10 @@
 
     .gameEnd {
       position: absolute;
-      top: 50%;
+      top: 40%;
       left: 50%;
       transform: translate(-50%, -50%);
-      font-size: calc(2vw + 2vh) !important;
+      font-size: calc(2vw + 2vh);
       z-index: 10;
       display: flex;
       flex-direction: column;
@@ -86,11 +86,9 @@
 
     .buttonGroup {
         margin-top: calc(0.5vw + 0.5vh);
-        font-size: calc(1vw + 1vh) !important;
         display: flex;
         justify-content: space-between; 
-        width: 100%; 
-        max-width: 200px;
+        width: 100%;
     }
 
       .buttonGroup button {
@@ -154,7 +152,22 @@
   box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
 }
 
+.game-button{
+  font-size: calc(1vw + 1vh);
+  color: white;
+  border: 0.12rem solid #775d85;
+  border-radius:1rem;
+  cursor: pointer;
+  filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+  transition: .5s;
+  background: transparent;
+}
 
+.game-button:hover {
+  color: white;
+  background-color: #775d85;
+  filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
+}
 
 @keyframes glow {
   from {
