fix leaveQueue / protect changeStatus

--- a/frontend/src/pages/Game/PongGame.css
+++ b/frontend/src/pages/Game/PongGame.css
@@ -129,7 +129,8 @@
   background-color: #00ff00;
 }
 
-.party-border {
+.party-game-board {
+  background: linear-gradient(-45deg, rgba(255,0,0,1) 0%, rgba(255,154,0,1) 10%, rgba(208,222,33,1) 20%, rgba(79,220,74,1) 30%, rgba(63,218,216,1) 40%, rgba(47,201,226,1) 50%, rgba(28,127,238,1) 60%, rgba(95,21,242,1) 70%, rgba(186,12,248,1) 80%, rgba(251,7,217,1) 90%, rgba(255,0,0,1) 100%);
   border-color: #ff00ff;
   animation: glow 1s ease-in-out infinite alternate;
 }
@@ -140,16 +141,24 @@
   animation: blink 3s infinite;
 }
 
-.glow-medium {
+/* .glow-medium {
   -webkit-box-shadow:0px 0px 72px 10px rgba(154,46,255,0.79);
   -moz-box-shadow: 0px 0px 72px 10px rgba(154,46,255,0.79);
   box-shadow: 0px 0px 72px 10px rgba(154,46,255,0.79);
+} */
+
+.glow-medium {
+  filter: drop-shadow(0px 0px 72px rgba(154,46,255,0.1));
 }
 
-.glow-small {
+/* .glow-small {
   -webkit-box-shadow:0px 0px 40px 6px rgba(154,46,255,0.79);
   -moz-box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
   box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
+} */
+
+.glow-small {
+  filter: drop-shadow(0px 0px 40px rgba(154,46,255,0.1));
 }
 
 .game-button{
