--- a/frontend/src/pages/Game/PongGame.css
+++ b/frontend/src/pages/Game/PongGame.css
@@ -121,18 +121,27 @@
 
 /* Party mode */
 .party-ball {
-  background-color: #ff00ff;
+  background: rgb(255,255,255);
+  background: linear-gradient(0deg, rgba(255,255,255,1) 0%, rgba(199,159,221,1) 42%, rgba(149,11,217,1) 100%);    
   animation: glow 1s ease-in-out infinite alternate;
-}
-
-.party-paddle {
-  background-color: #00ff00;
 }
 
 .party-game-board {
-  background: linear-gradient(-45deg, rgba(255,0,0,1) 0%, rgba(255,154,0,1) 10%, rgba(208,222,33,1) 20%, rgba(79,220,74,1) 30%, rgba(63,218,216,1) 40%, rgba(47,201,226,1) 50%, rgba(28,127,238,1) 60%, rgba(95,21,242,1) 70%, rgba(186,12,248,1) 80%, rgba(251,7,217,1) 90%, rgba(255,0,0,1) 100%);
-  border-color: #ff00ff;
-  animation: glow 1s ease-in-out infinite alternate;
+  background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 5s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+      background-position: 0% 50%;
+  }
+  50% {
+      background-position: 100% 50%;
+  }
+  100% {
+      background-position: 0% 50%;
+  }
 }
 
 /* Hardcore mode */
@@ -141,26 +150,7 @@
   animation: blink 3s infinite;
 }
 
-/* .glow-medium {
-  -webkit-box-shadow:0px 0px 72px 10px rgba(154,46,255,0.79);
-  -moz-box-shadow: 0px 0px 72px 10px rgba(154,46,255,0.79);
-  box-shadow: 0px 0px 72px 10px rgba(154,46,255,0.79);
-} */
-
-.glow-medium {
-  filter: drop-shadow(0px 0px 72px rgba(154,46,255,0.1));
-}
-
-/* .glow-small {
-  -webkit-box-shadow:0px 0px 40px 6px rgba(154,46,255,0.79);
-  -moz-box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
-  box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
-} */
-
-.glow-small {
-  filter: drop-shadow(0px 0px 40px rgba(154,46,255,0.1));
-}
-
+/* general effects */
 .game-button{
   font-size: calc(1vw + 1vh);
   color: white;
@@ -177,6 +167,26 @@
   background-color: #775d85;
   filter: drop-shadow(0 0 0.8rem #775d85) contrast(2) brightness(2);
 }
+
+.glow-medium {
+  filter: drop-shadow(0px 0px 72px rgba(154,46,255,0.1));
+}
+
+.glow-small {
+  filter: drop-shadow(0px 0px 40px rgba(154,46,255,0.1));
+}
+
+/* .glow-medium {
+  -webkit-box-shadow:0px 0px 72px 10px rgba(154,46,255,0.79);
+  -moz-box-shadow: 0px 0px 72px 10px rgba(154,46,255,0.79);
+  box-shadow: 0px 0px 72px 10px rgba(154,46,255,0.79);
+} */
+
+/* .glow-small {
+  -webkit-box-shadow:0px 0px 40px 6px rgba(154,46,255,0.79);
+  -moz-box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
+  box-shadow: 0px 0px 40px 6px rgba(154,46,255,0.79);
+} */
 
 @keyframes glow {
   from {
