--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -2,42 +2,113 @@
 	max-width: 1280px;
 	margin: 0 auto;
 	padding: 2rem;
-	text-align: center;
   }
-  
-  .logo {
-	height: 6em;
-	padding: 1.5em;
-	will-change: filter;
-	transition: filter 300ms;
-  }
-  .logo:hover {
-	filter: drop-shadow(0 0 2em #646cffaa);
-  }
-  .logo.react:hover {
-	filter: drop-shadow(0 0 2em #61dafbaa);
-  }
-  
-  @keyframes logo-spin {
-	from {
-	  transform: rotate(0deg);
+
+  .logo-profile{
+	display: flex;
+	justify-content: center;
+	padding-top: 3%;
+}
+
+.logo-profile-size{
+	width: 250px;
+	display: flex;
+	justify-content: center;
+}
+
+.display-username{
+	padding-top: 1%;
+	font-size: 20px;
+	font-style: bold;
+	display: flex;
+	justify-content: center;
+}
+
+.avatar-div{
+	display: flex;
+	justify-content: center;
+	padding-bottom: 1%;
+}
+
+.avatar-dimensions{
+	border-radius: 30px;
+}
+
+.avatar-button-div{
+	display: flex;
+	justify-content: center;
+}
+
+  .avatar-button{
+    font-size: 12px;
+    color: white;
+    border: 0px solid hsl(279, 18%, 44%);
+    border-radius:30px;
+    padding: 3px 12px;
+    cursor: pointer;
+    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+    transition: .5s;
+    background: transparent;
+}
+
+.avatar-button:hover{
+	color: white;
+    background-color: #775d85;
+    filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
+}
+
+.change-avatar-img{
+	width: 30px;
+}
+
+.div-submit-button-new{
+	display: flex;
+	justify-content: center;
+	padding-top: 2%;
+}
+
+.user-input-new{
+	font-size: 14px;
+	font-style: italic;
+	border: 1px solid white;
+	border-radius: 8px;
+	filter: drop-shadow(0 0 2px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+	padding-top: 4px;
+	padding-bottom: 4px;
 	}
-	to {
-	  transform: rotate(360deg);
+
+	.submit-button-new-div{
+		display: flex;
+		justify-content: center;
+		padding-top: 8px;
 	}
-  }
-  
-  @media (prefers-reduced-motion: no-preference) {
-	a:nth-of-type(2) .logo {
-	  animation: logo-spin infinite 20s linear;
+
+	.submit-button-new{
+		font-size: 10px;
+		color: white;
+		border: 3px solid hsl(279, 18%, 44%);
+		border-radius:30px;
+		padding: 4px 12px;
+		cursor: pointer;
+		filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+		transition: .5s;
+		background: transparent;
 	}
-  }
-  
-  .card {
-	padding: 2em;
-  }
-  
-  .read-the-docs {
-	color: #888;
-  }
-  
+
+	.submit-button-new:hover{
+		color: white;
+		background-color: #775d85;
+		filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
+	}
+
+	
+.fa-div{
+	display: flex;
+	justify-content: center;
+	padding-top: 4%;
+	padding-bottom: 3%;
+}
+
+.stats{
+
+}
