--- a/frontend/src/pages/Message/Contact.css
+++ b/frontend/src/pages/Message/Contact.css
@@ -1,81 +1,50 @@
-* {
-	box-sizing: border-box;
-  }
-  body {
-	font-family: "Open Sans";
-	background: #2c3e50;
-	color: #ecf0f1;
-	line-height: 1.618em;
-  }
+*
   .wrapper {
 	/* max-width: 50rem; */
+	background: #2c3e50;
 	width: 30%;
 	margin: 0 auto;
   }
   .tabs {
-	position: relative;
-	/* margin: 3rem 0; */
-	background: #1abc9c;
-	height: 14.75rem;
+	height: 3.5rem;
+	
   }
-  .tabs::before,
-  .tabs::after {
-	content: "";
-	display: table;
-  }
-  .tabs::after {
-	clear: both;
-  }
-  .tab {
-	width: 50%;
 
+  .active-tab {
+	background-color: blueviolet;
+	border-color:chartreuse;
+	border-width: 0.2rem;
+	border-style: solid;
+	border-bottom-style: hidden;
+  }
+
+  .inactive-tab {
+	background-color: brown;
+	border-color:chartreuse;
+	border-width: 0.2rem;
+	border-style: hidden;
+	border-bottom-style: solid;
+  }
+
+  .tabs > div {
 	float: left;
-  }
-  .tab-switch {
-	display: none;
-  }
-  .tab-label {
 	position: relative;
-	display: block;
-	line-height: 2.75em;
-	height: 3em;
-	padding: 0 1.618em;
-	background: #1abc9c;
-	border-right: 0.125rem solid #16a085;
-	color: #fff;
-	cursor: pointer;
-	top: 0;
-	transition: all 0.25s;
+	width: 50%;
+	height: 100%;
+	
   }
-  .tab-label:hover {
-	top: -0.25rem;
-	transition: top 0.25s;
-  }
+  
   .tab-content {
 	/* height: 12rem; */
 	width: 100%;
-	position: absolute;
+	position: relative;
 	z-index: 1;
-	top: 2.75em;
-	left: 0;
 	padding: 1.618rem;
-	background: #fff;
-	color: #2c3e50;
-	border-bottom: 0.25rem solid #bdc3c7;
-	opacity: 0;
+	background: blueviolet;
 	transition: all 0.35s;
+	border-color:chartreuse;
+	border-width: 0.2rem;
+	border-style: solid;
+	border-top-style: hidden;
   }
-  .tab-switch:checked + .tab-label {
-	background: #fff;
-	color: #2c3e50;
-	border-bottom: 0;
-	border-right: 0.125rem solid #fff;
-	transition: all 0.35s;
-	z-index: 1;
-	top: -0.0625rem;
-  }
-  .tab-switch:checked + label + .tab-content {
-	z-index: 2;
-	opacity: 1;
-	transition: all 0.35s;
-  }
+  
