fix channel creation

--- a/frontend/src/pages/Message/CreateNewConversation.css
+++ b/frontend/src/pages/Message/CreateNewConversation.css
@@ -17,3 +17,10 @@
 .create-conv-show {
     display: flex;
 }
+
+.chat-error {
+	color: red;
+	font-size: 1rem;
+	text-align: center;
+    margin: 0.5rem 0;
+}
