--- a/frontend/src/pages/Message/BlockUser.css
+++ b/frontend/src/pages/Message/BlockUser.css
@@ -2,20 +2,26 @@
 	position: relative;
 }
 
-.block-user {
-	position: absolute;
-	background-color: black;
-	margin: 5px 0;
-	padding: 0;
-
-	border: 2px solid grey;
-	width: 350px;
-	height: 350px;
-	z-index: 999;
-
-}
-
 .block-user > form > div {
 	height: 20%;
 	border-bottom: 1px solid grey;
+}
+
+.block-user-button {
+    font-size: 0.8rem;
+    color: white;
+    border: 3px solid #775d85;
+    border-radius:30px;
+    padding: 0.5rem 0.8rem;
+    cursor: pointer;
+    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+    transition: .5s;
+    background: transparent;
+	margin-bottom: 1rem;
+}
+
+.block-user-button:hover {
+    color: white;
+    background-color: #775d85;
+    filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
 }
