--- a/frontend/src/pages/Message/ChatPage.css
+++ b/frontend/src/pages/Message/ChatPage.css
@@ -1,40 +1,36 @@
-.create-conv {
-    position: relative;
-}
-
-.create-conv-show {
-    display: flex;
-}
-
-.chat-error {
-	color: red;
-	font-size: 1rem;
-	text-align: center;
-    margin: 0.5rem 0;
-}
-
-.create-conv-button {
+.chat-submit-button {
     font-size: 0.8rem;
     color: white;
     border: 3px solid #775d85;
     border-radius:30px;
-    padding: 0.5rem 0.7rem;
+    padding: 0.2rem 0.8rem;
     cursor: pointer;
     filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
     transition: .5s;
     background: transparent;
-	margin-bottom: 1rem;
+    margin-bottom: 1rem;
 }
 
-.create-conv-button:hover {
+.chat-submit-button:hover {
     color: white;
     background-color: #775d85;
     filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
 }
 
-.create-conv-select {
+.chat-dropdown-menu {
+    position: absolute;
     background-color: #510779;
-    border: 3px solid #c56ff3;
+    padding: 0;
+
+    border: 0.2rem solid #994dc2;
+    border-radius:1rem;
+    width: 15rem;
+    height: 17rem;
+    z-index: 999;
+}
+
+.chat-input-field {
+    border-color: #994dc2;
     border-radius: 1rem;
     display: relative;
     flex-direction: column;
@@ -42,4 +38,9 @@
     align-items: center;
     height: 100%;
     margin-bottom: 0.7rem;
+}
+
+.chat-input-field:focus {
+    border-color: #d386fd;
+    outline: none;
 }
