--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -1,46 +1,50 @@
 nav{
     width: 100%;
     display: flex;
+    margin-bottom: 32px;
+    gap: 17px;
+    align-items: center;
+    justify-content: space-between;
 }
 
 li{
     list-style: none;
 }
 
+.nav-left, .nav-right {
+    display: flex;
+    align-items: center;
+    gap: 17px;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+}
+
 .nav-home{
     transition: .3s;
-    margin-top: 8px;
     font-size: 16px;
     display: flex;
     justify-content: center;
-    margin-right: 6%;
-    width: 10%;
     color: #fff;
     text-shadow:  0 0 7px #fff, 
              0 0 10px #fff, 
              0 0 42px rgb(230, 18, 124),   
              0 0 77px rgb(230, 18, 124), 
-             0 0 100px rgb(230, 18, 124) 
+             0 0 100px rgb(230, 18, 124);
 }
 
 .nav-home:hover{
-    font-size: 18px;
     color: white;
     transition:0.5s;
     background-color: #383838;
     border-radius: 15px;
     cursor: pointer;
     transition: .3s;
-
+    transform: scale(1.1);
 }
 
 a{
     color:white;
     text-decoration: none;
-}
-
-.logout-button{
-    margin-left: 40%;
 }
 
 .button{
@@ -59,4 +63,16 @@ a{
     color: white;
     background-color: #775d85;
     filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
+}
+
+.friends-notif button {
+    font-size: 15px;
+    color: white;
+    border: 2px solid #775d85;
+    border-radius:30px;
+    padding: 5px 20px;
+    cursor: pointer;
+    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+    transition: .5s;
+    background: transparent;
 }
