--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -2,9 +2,9 @@
 	max-width: 1280px;
 	margin: 0 auto;
 	padding: 2rem;
-  }
+}
 
-  .logo-profile{
+.logo-profile{
 	display: flex;
 	justify-content: center;
 	padding-top: 3%;
@@ -14,6 +14,19 @@
 	width: 250px;
 	display: flex;
 	justify-content: center;
+}
+
+.left-profile {
+	position: relative;
+	float: left;
+	width: 25%;
+	height: 7000px;
+}
+
+.match-history {
+	position: relative;
+	float: left;
+	width: 50%;
 }
 
 .display-username{
@@ -39,7 +52,7 @@
 	justify-content: center;
 }
 
-  .avatar-button{
+.avatar-button{
     font-size: 12px;
     color: white;
     border: 0px solid hsl(279, 18%, 44%);
@@ -75,39 +88,40 @@
 	filter: drop-shadow(0 0 2px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
 	padding-top: 4px;
 	padding-bottom: 4px;
-	}
+}
 
-	.submit-button-new-div{
-		display: flex;
-		justify-content: center;
-		padding-top: 8px;
-	}
-
-	.submit-button-new{
-		font-size: 10px;
-		color: white;
-		border: 3px solid hsl(279, 18%, 44%);
-		border-radius:30px;
-		padding: 4px 12px;
-		cursor: pointer;
-		filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
-		transition: .5s;
-		background: transparent;
-	}
-
-	.submit-button-new:hover{
-		color: white;
-		background-color: #775d85;
-		filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
-	}
-
-	
-.fa-div{
+.submit-button-new-div{
 	display: flex;
 	justify-content: center;
+	padding-top: 8px;
+}
+
+.submit-button-new{
+	font-size: 10px;
+	color: white;
+	border: 3px solid hsl(279, 18%, 44%);
+	border-radius:30px;
+	padding: 4px 12px;
+	cursor: pointer;
+	filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+	transition: .5s;
+	background: transparent;
+}
+
+.submit-button-new:hover{
+	color: white;
+	background-color: #775d85;
+	filter: drop-shadow(0 0 20px #775d85) contrast(2) brightness(2);
+}
+
+
+.fa-div{
+	/* display: flex;
+	justify-content: center; */
 	padding-top: 3%;
 	padding-bottom: 3%;
 }
+
 
 .elo{
 	display: flex;
