--- a/frontend/src/pages/Message/ChatPage.css
+++ b/frontend/src/pages/Message/ChatPage.css
@@ -2,11 +2,12 @@
     font-size: 0.8rem;
     color: white;
     border: 3px solid #775d85;
-    border-radius:30px;
+    border-radius: 30px;
     padding: 0.2rem 0.8rem;
     cursor: pointer;
-    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
-    transition: .5s;
+    filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85)
+        contrast(2) brightness(2);
+    transition: 0.5s;
     background: transparent;
     margin-bottom: 1rem;
 }
@@ -23,7 +24,19 @@
     padding: 0;
 
     border: 0.2rem solid #994dc2;
-    border-radius:1rem;
+    border-radius: 1rem;
+    width: 15rem;
+    height: 20rem;
+    z-index: 999;
+}
+
+.chat-dropdown-joinmenu {
+    position: absolute;
+    background-color: #510779;
+    padding: 0;
+
+    border: 0.2rem solid #994dc2;
+    border-radius: 1rem;
     width: 15rem;
     height: 17rem;
     z-index: 999;
