--- a/frontend/src/pages/Login/Login.css
+++ b/frontend/src/pages/Login/Login.css
@@ -16,6 +16,7 @@
 
 .username{
 padding-bottom: 2%;
+height: 72px;
 }
 
 .user-input{
@@ -25,6 +26,16 @@ border-radius: 8px;
 filter: drop-shadow(0 0 2px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
 padding-top: 6px;
 padding-bottom: 6px;
+}
+.user-input::placeholder{
+	opacity: 0.35;
+	font-style: italic;
+}
+.auth-input{
+	height: 80%;
+}
+.auth-error {
+	height: 20%;
 }
 
 .submit{
