--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -4,29 +4,83 @@
 	padding: 2rem;
 }
 
-.logo-profile{
+.profile-title{
+	width: 100%;
 	display: flex;
 	justify-content: center;
-	padding-top: 3%;
+	padding-top: 2%;
+}
+
+.logo-profile{
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 
 .logo-profile-size{
-	width: 250px;
+	width: 300px;
 	display: flex;
 	justify-content: center;
+}
+
+.profile-wrapper {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	margin-top: 32px;
 }
 
 .left-profile {
 	position: relative;
 	float: left;
-	width: 25%;
-	height: 7000px;
+	width: 35%;
+	padding-top: 2%;
 }
 
 .match-history {
+	width: 60% ;
+	color: white;
+	border-radius:30px;
+	align-items: center;
+	padding-top: 2%;
+}
+
+.match {
+	width: 100% ;
+	color: white;
+	border-radius:30px;
+	align-items: center;
+}
+
+.game-outcome {
 	position: relative;
 	float: left;
-	width: 50%;
+	width: 25%;
+}
+
+.game-opponent {
+	position: relative;
+	float: left;
+	width: 20%;
+}
+
+.game-score {
+	position: relative;
+	float: left;
+	width: 25%;
+}
+
+.game-mode {
+	position: relative;
+	float: left;
+	width: 25%;
+}
+
+.search-profile {
+	position: relative;
+	float: left;
+	width: 25%;
+	gap: 30px;
 }
 
 .display-username{
@@ -116,8 +170,6 @@
 
 
 .fa-div{
-	/* display: flex;
-	justify-content: center; */
 	padding-top: 3%;
 	padding-bottom: 3%;
 }
@@ -138,13 +190,49 @@
 
 .stats{
 	display: flex;
+	flex-direction : column;
+	align-items: center; 
 	justify-content: center;
+	position: relative;
+	gap : 15px;
 }
 
-.game-stats{
-	width: 650px;
+.game-stats, .achievements {
+	width: 100% ;
+	height: 100% ;
 	color: white;
 	border: 1px solid hsl(0, 0%, 100%);
 	border-radius:30px;
-	filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(2);
+	filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(1.7);
+}
+
+.achievement {
+	width: 100% ;
+	height: 70px ;
+	color: white;
+	border-radius:30px;
+	align-items: center;
+	padding-bottom: 80px;
+}
+
+.achievement-icon {
+	background-color: #ffffff;
+	border-radius : 1rem;
+	border: 2.5px solid rgba(0, 0, 0, 1);
+	width: 50px;
+	height: 50px;
+	position: relative;
+	float: left;
+}
+
+.achievement-name {
+	width: 30%;
+	position: relative;
+	float: left;
+}
+
+.achievement-description {
+	padding-left : 15px;
+	position: relative;
+	float: left;
 }
