--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -32,7 +32,6 @@
 
 .left-profile {
 	position: relative;
-	float: left;
 	width: 35%;
 	padding-top: 2%;
 }
@@ -77,10 +76,26 @@
 }
 
 .search-profile {
+	width: 100%;
 	position: relative;
-	float: left;
-	width: 25%;
-	gap: 30px;
+	display: flex;
+	gap: 12px;
+}
+
+.search-profile form {
+	width: 100%;
+	display: flex;
+	gap: 12px;
+	justify-content: center;
+}
+
+.search-profile h5 {
+	text-align: left;
+	padding-left: 8px;
+	margin-top: 6px;
+	margin-bottom: 0;
+	font-style: italic;
+	height: 20px;
 }
 
 .display-username{
@@ -150,7 +165,7 @@
 	padding-top: 8px;
 }
 
-.submit-button-new{
+.submit-button-new {
 	font-size: 10px;
 	color: white;
 	border: 3px solid hsl(279, 18%, 44%);
@@ -172,12 +187,6 @@
 .fa-div{
 	padding-top: 3%;
 	padding-bottom: 3%;
-}
-
-
-.elo{
-	display: flex;
-	justify-content: center;
 }
 
 .match-img{
@@ -206,6 +215,18 @@
 	filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(1.7);
 }
 
+.game-stats ul {
+	margin-top: 0 !important;
+}
+
+.achievements ul li {
+	padding-top: 0px;
+}
+
+.achievements h2, .game-stats h2 {
+	padding-bottom: 10px !important; 
+}
+
 .achievement {
 	width: 100% ;
 	height: 70px ;
@@ -213,6 +234,8 @@
 	border-radius:30px;
 	align-items: center;
 	padding-bottom: 80px;
+	display: flex;
+	margin-top: 30px;
 }
 
 .achievement-icon {
@@ -222,17 +245,21 @@
 	width: 50px;
 	height: 50px;
 	position: relative;
-	float: left;
 }
 
 .achievement-name {
 	width: 30%;
 	position: relative;
-	float: left;
 }
 
 .achievement-description {
+	width: 60%;
 	padding-left : 15px;
 	position: relative;
-	float: left;
+	text-align: left;
+}
+
+.search-profile button.submit-button-new {
+	width: 90px;
+	height: 30px;
 }
