--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -74,7 +74,7 @@ a{
 
 .friends-notif button {
     color: white;
-    border: 2px transparent;
+    border: 2px solid rgba(255, 255, 255, 0);
     border-radius:30px;
     padding: 3px 7px;
     cursor: pointer;
