--- a/frontend/src/pages/Message/CreateNewConversation.css
+++ b/frontend/src/pages/Message/CreateNewConversation.css
@@ -47,3 +47,19 @@
     height: 22rem;
     z-index: 999;
 }
+
+.position-relative-input {
+    position: relative;
+    padding-bottom : 30px;
+}
+
+.chat-error-create-chan {
+    position : absolute;
+    bottom : 14px;
+	color: red;
+	font-size: 12px;
+	text-align: center;
+	font-style: italic;
+    font-weight: bold;
+    width: 100%;
+}
