--- a/frontend/src/pages/Profile/Profile.css
+++ b/frontend/src/pages/Profile/Profile.css
@@ -212,7 +212,7 @@
 	width: 100% ;
 	height: 100% ;
 	color: white;
-	border: 1px solid hsl(0, 0%, 100%);
+	border: 2px solid hsl(0, 0%, 100%);
 	border-radius:30px;
 	filter: drop-shadow(0 0 15px #775d85) drop-shadow(0 0 50px #775d85) contrast(2) brightness(1.7);
 }
@@ -241,9 +241,8 @@
 }
 
 .achievement-icon {
-	background-color: #ffffff;
 	border-radius : 1rem;
-	border: 2.5px solid rgba(0, 0, 0, 1);
+	border: 2.5px solid rgb(255, 255, 255);
 	width: 50px;
 	height: 50px;
 	position: relative;
