--- a/frontend/src/pages/Game/PongGame.css
+++ b/frontend/src/pages/Game/PongGame.css
@@ -126,11 +126,16 @@
 }
 
 .party-game-board {
-  /* background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-  background-size: 400% 400%;
-  animation: gradient 5s ease infinite; */
+  background-size: 300% 300%;
+  animation: gradient 5s ease infinite;
+}
+
+
+/* Hardcore mode */
+.hc-game-board {
   background : center center no-repeat;
   background-size : cover;
+  background-image: url("https://i.imgur.com/ZYgWa1n.jpg");
 }
 
 @keyframes gradient {
